--- a/src/app/shop-profile/shop-profile.component.html
+++ b/src/app/shop-profile/shop-profile.component.html
@@ -150,7 +150,7 @@
                                 <div class="form-group">
                                     <label class="leftnamemrg">Zipcode</label><span class="requiredfield"> *</span>
                                     <p class="labelFieldSpace" style="display: none;"></p>
-                                    <input type="text" class="form-control shopzipcodecls2 "  placeholder=""   minLength="5" maxLength="6"  pattern="zipPattern" formControlName="zipcode" [(ngModel)]="ShopProfileDetails.zipcode">
+                                    <input type="text" class="form-control shopzipcodecls2 "  placeholder=""   minLength="5" maxLength="6"  formControlName="zipcode" [(ngModel)]="ShopProfileDetails.zipcode">
                                     <div *ngIf="shopprofile.controls['zipcode'].touched && shopprofile.controls['zipcode'].invalid "> 
                     
                                         <div *ngIf="shopprofile.controls['zipcode'].errors" style="color: red;"> 
