--- a/src/app/combo-offers/combo-offers.component.html
+++ b/src/app/combo-offers/combo-offers.component.html
@@ -226,7 +226,7 @@
       <div class="col-sm-2">
         <label class="offerpreg1" style="width: 80px;">Offer (%)</label>
         <br>
-        <input  class="offerpreg2" type="number" (keyup)="getOfferPrice($event)" id="combooffer_offerpercent" style="width: 50px;height: 24px">
+        <input  class="offerpreg2" type="number" (keyup)="getOfferPrice($event)" id="combooffer_offerpercent" style="width: 50px;height: 24px" positive>
   
         <p style="color: red;display: none;text-align: left;" id="offerpercentError">Enter offer %</p>
         <p style="color: red;display: none;text-align: left;" id="offerpercentError1">Invalid Offer %</p>
