--- a/src/app/shop-service/shop-service.component.html
+++ b/src/app/shop-service/shop-service.component.html
@@ -265,7 +265,7 @@
             <td>Service</td>
             <td class="">
 
-        <ng-autocomplete class="ng-autocomplete"  minlength="3"  style="" [data]="MasterServiceData1" formControlName="service_name" [searchKeyword]="keyword" (selected)='selectEvent($event)'
+        <ng-autocomplete class="ng-autocomplete"  minlength="3"  [data]="MasterServiceData1" formControlName="service_name" [searchKeyword]="keyword" (selected)='selectEvent($event)'
               (inputChanged)='onChangeSearch($event)'    (inputFocused)='onFocused($event)' [itemTemplate]="itemTemplate"
               [notFoundTemplate]="notFoundTemplate" >
             </ng-autocomplete>
