--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -120,7 +120,16 @@
   <mat-list-item *ngIf="userroleSes=='CustomerSes'" class="menudesk cursorcls" style="margin-left:400px;"> <a class="colorheaderMenu"   routerLink='/search' mat-list-item >
     <i class="fa fa-search" aria-hidden="true"></i>&nbsp; </a>
     
-    <input class="search" type="text" placeholder="Search" >
+    <!-- <input class="search" type="text" placeholder="Search" > -->
+
+    <!-- <div style="text-align: center;"> -->
+      <input class="search" type="text" placeholder="Search" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+      <mat-autocomplete #auto="matAutocomplete" placeholder="select shop">
+        <mat-option class="ss" *ngFor="let option of filteredOptions | async" [value]="option.name1" style="width: 300px !important;" (onSelectionChange)="onSelFunc(option.id);onSelFunc1(option.id)" >
+          {{option.name1}}
+        </mat-option>
+      </mat-autocomplete>
+  <!-- </div> -->
   
     <!-- <mat-form-field class="example-full-width">
     <input class="search" type="text" placeholder="Search" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
