--- a/src/app/shopowner-onlinebooking/shopowner-onlinebooking.component.html
+++ b/src/app/shopowner-onlinebooking/shopowner-onlinebooking.component.html
@@ -4,7 +4,7 @@
 <h2 class="mainheading" style="text-align:center;">Online Booking</h2>
 
 <div style="text-align: center;" >
-  <img src="http://localhost/MNC-PHP-API/{{ShopProfileDetailsLogo}}" style="width: 50px;margin-top: -7px;"><b class="subheading"> {{ShopProfileDetailsName}}</b>
+  <img src="{{apiurlforhtm}}/{{ShopProfileDetailsLogo}}" style="width: 50px;margin-top: -7px;"><b class="subheading"> {{ShopProfileDetailsName}}</b>
   </div>
 
 <div >
@@ -303,7 +303,7 @@
                      (beforeChange)="beforeChange1($event)">
      <div ngxSlickItem *ngFor="let s of offerslist" class="slide1" style="width:100%;">
        <div class=" card" >
-         <!-- <div class="image-container oneimage" style="border:1px solid;background-image: url('http://localhost/MNC-PHP-API/{{s.shop_image}}')" > -->
+         <!-- <div class="image-container oneimage" style="border:1px solid;background-image: url('')" > -->
               <div class="first">
                  <div class="d-flex justify-content-between align-items-center"> 
                    <span style="margin-left: 6px;margin-top: 5px;"*ngIf="s.offer_percent != 0" class="discount">Up to {{s.offer_percent}}% Off</span> 
@@ -343,7 +343,7 @@
 
            <div class="d-flex justify-content-between align-items-center pt-1">
              <!-- <div class="color-select d-flex "> 
-               <img src="http://localhost/MNC-PHP-API/{{s.shop_logo}}" style="width: 50px;margin-top: -7px;"> {{s.name}}
+               <img src="" style="width: 50px;margin-top: -7px;"> {{s.name}}
                </div> -->
           </div>
 
