--- a/src/app/rightsidebar/rightsidebar.component.html
+++ b/src/app/rightsidebar/rightsidebar.component.html
@@ -2,13 +2,13 @@
     <ul class="sticky">
         <li>
             <!-- <a *ngIf="userroleSes == 'CustomerSes'" style="cursor: pointer;" (click)="testimonialAdd()">
-                <img src="../assets/images/rating.png" width="40" height="38">
+                <img src="" width="40" height="38">
                 
             </a> -->
 
             <a  (click)="loginToRate()" style="cursor: pointer;" title="Login to Rate1">
                 <!-- Feedback -->
-                <img src="../assets/images/rating.png" width="40" height="38" >
+                <img src="{{apiurlforhtm}}/images/rating.png" width="40" height="38" >
             </a>
         </li>
         
@@ -20,12 +20,12 @@
     <ul class="sticky">
         <li>
             <a  style="cursor: pointer;" (click)="testimonialAdd()">
-                <img src="../assets/images/rating.png" width="40" height="38">
+                <img src="{{apiurlforhtm}}/images/rating.png" width="40" height="38">
                 
             </a>
 
             <!-- <a  (click)="loginToRate()" style="cursor: pointer;" >
-                <img src="../assets/images/rating.png" width="40" height="38" title="Please Login to Rate">
+                <img src="" width="40" height="38" title="Please Login to Rate">
             </a> -->
         </li>
         
