--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,7 +61,7 @@
   </button>
 
 
-  <mat-list-item  *ngIf="userroleSes=='CustomerSes'" > <img src="../assets/images/Kainos_logo.png" style="width: 60px;"> </mat-list-item>
+  <mat-list-item  *ngIf="userroleSes=='CustomerSes'" > <img src="{{apiurlforhtm}}/images/Kainos_logo.png" style="width: 60px;"> </mat-list-item>
   <mat-list-item  *ngIf="userroleSes=='shopOwnerSes'"> <img src="{{apiurlforhtm}}/{{shoplogo}}" style="width: 60px;"> </mat-list-item>
   <label style="width: 55px;"></label>
   <mat-list-item class="menudesk" *ngIf="currentUsername" > <a  class="colorheaderMenu" >Hi, {{currentUsername}}</a> </mat-list-item> &nbsp; &nbsp;
@@ -254,7 +254,7 @@
 
       © 2022 Copyright:
       <a href="http://www.kainosinnovative.com"> Kainos Innovative Solutions</a>
-      <mat-list-item  *ngIf="userroleSes=='shopOwnerSes'" > <img target="_blank" src="../assets/images/Kainos_logo.png" style="width: 40px;"> </mat-list-item>
+      <mat-list-item  *ngIf="userroleSes=='shopOwnerSes'" > <img target="_blank" src="{{apiurlforhtm}}/images/Kainos_logo.png" style="width: 40px;"> </mat-list-item>
     </div>
     <!-- Copyright -->
 
