--- a/src/app/customer-create/customer-create.component.html
+++ b/src/app/customer-create/customer-create.component.html
@@ -13,7 +13,7 @@
            <!--phto-->
 
            <img *ngIf="CustomerDataById1.profile_img" style="width: 100px;height: 100px;"  src="{{apiurlforhtm}}/{{CustomerDataById1.profile_img}}" class="rounded-circle">
-           <img *ngIf="!CustomerDataById1.profile_img" style="width: 180px;height: 100px;"  src="../assets/images/avatar.png" class="rounded-circle">
+           <img *ngIf="!CustomerDataById1.profile_img" style="width: 180px;height: 100px;"  src="{{apiurlforhtm}}/images/avatar.png" class="rounded-circle">
 
             <div class="form-group form-inline">
             <label >Profile Photo</label>
@@ -534,7 +534,7 @@
 
           <div ngxSlickItem *ngFor="let image of Whislistid1" class="slide" style="padding-top:12px !important;padding-left:12px !important;">
             
-            <img src="{{apiurlforhtm}}/MNC-PHP-API/{{image.shop_logo}}" width="100px" height="100px">
+            <img src="{{apiurlforhtm}}/{{image.shop_logo}}" width="100px" height="100px">
 
           <div class="d-flex justify-content-between align-items-center pt-1" >
            <h5 class="dress-name" style="text-align:center;font-weight:bold;">{{image.name}}</h5>
