--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,7 +42,7 @@
 <div *ngFor="let s of dashboardShop1;let k=index">
   <p *ngIf="k==0" class="dark-blue-text w-responsive mx-auto fontitalyHome" style="text-align: center;margin-bottom: 2%;font-size: 14px;">Special Deal Limited Offer Today 
     <!-- <img style="height: 50px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRyNBH8h9mrcFvdSft9AiYrolk-c8E4Z5OOaKwwBpxpOWdTzSSuFociZ1KI_Dt_f7cs3o&usqp=CAU"> -->
-     <img style="height: 40px;" src="https://thumbs.dreamstime.com/b/hurry-up-154424269.jpg"> 
+     <img style="height: 40px;" src="{{apiurlforhtm}}/images/hurry-up-154424269.jpg"> 
      <!-- <img style="height: 50px;" src="https://t3.ftcdn.net/jpg/04/73/13/54/360_F_473135463_64SB5yRtYoiZzHNDq7aDTkX3IWB1sNWn.jpg"> -->
   </p>
 </div>
@@ -64,7 +64,7 @@
           <!-- <div *ngFor="let h of ShopHolidaysDetails1;let k=index;"> --> 
           <div class=" card" style="height: 417px !important;">
             <!-- height:300px;margin-top:28px;width: 245px;margin-left: 18px; -->
-            <div class="image-container oneimage" style="border:1px solid;background-image: url('{{apiurlforhtm}}/MNC-PHP-API/{{s.shop_image}}')" >
+            <div class="image-container oneimage" style="border:1px solid;background-image: url('{{apiurlforhtm}}/{{s.shop_image}}')" >
                 <div class="first">
 
                     <div class="d-flex justify-content-between align-items-center"> <span class="discount" >Up to {{s.offer_percent}}% Off</span> 
@@ -91,7 +91,7 @@
 
               <div class="d-flex justify-content-between align-items-center pt-1">
                 <div class="color-select d-flex "> 
-                  <img src="{{apiurlforhtm}}/MNC-PHP-API/{{s.shop_logo}}" style="width: 50px;margin-top: -7px;"> {{s.name}}
+                  <img src="{{apiurlforhtm}}/{{s.shop_logo}}" style="width: 50px;margin-top: -7px;"> {{s.name}}
                   </div>
 
                   <!-- <div *ngFor="let s1 of CustomerWhislistData1"> -->
@@ -211,7 +211,7 @@
 
               <div class="d-flex justify-content-between align-items-center pt-1">
                 <div class="color-select d-flex "> 
-                  <img src="{{apiurlforhtm}}/MNC-PHP-API/{{s.shop_logo}}" style="width: 50px;margin-top: -7px;"> {{s.name}}
+                  <img src="{{apiurlforhtm}}/{{s.shop_logo}}" style="width: 50px;margin-top: -7px;"> {{s.name}}
                   </div>
 
                   <div *ngIf="s.wishlistcheck === 'Yes';else whislistElse2"  class="fa fa-heart " id="wishlistvalue2_{{s.shop_id}}" style="margin-top:12px;color: red;cursor: pointer;" (click)="clickEvent(s.shop_id,'offer')"> </div> 
