--- a/src/app/shoplogin/shoplogin.component.html
+++ b/src/app/shoplogin/shoplogin.component.html
@@ -8,7 +8,7 @@
 <div class="col-sm-4 " style="border: 2px solid; border-color: #e81c2e;border-right: none;">
 
   <!-- <mat-list-item >  -->
-    <img src="../assets/images/Kainos_logo.png" style="margin-left: 13px;width: 113px;height: 69px; margin-top: 37px;"> 
+    <img src="{{apiurlforhtm}}/images/Kainos_logo.png" style="margin-left: 13px;width: 113px;height: 69px; margin-top: 37px;"> 
   <!-- </mat-list-item>    <br>
    <mat-card-title class="" style="margin-left: 13px;color: #202c45;">Kainos </mat-card-title> -->
 
