--- a/src/app/viewbookdetail-popup/viewbookdetail-popup.component.html
+++ b/src/app/viewbookdetail-popup/viewbookdetail-popup.component.html
@@ -5,20 +5,20 @@
 
       <h2 style="text-align: center;" class="mainheading">{{ViewBooking_heading}}</h2>
 
-<div *ngFor="let b of  bookingDetailsById; let i=index;">
+<div style="border: 1px solid #051b87;padding: 14px;" *ngFor="let b of  bookingDetailsById; let i=index;">
     <div class="row" >
         
             <div class="col-sm-6">
                 <div class="row">
                     <div class="col-sm-6"><b>Booking Id</b></div>
-                    <div class="col-sm-6">{{b.Booking_id}}</div>
+                    <div class="col-sm-6 fontwt500">{{b.Booking_id}}</div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="row">
                     <!-- <p>Time Format From  24 to 12 : {{'23:11:00' | convertFrom24To12Format}}</p> -->
                     <div class="col-sm-6"><b>Pick-up & Drop</b></div>
-                    <div class="col-sm-6"><span *ngIf = "b.pickup_drop == 0;else pickDropid" >No</span>
+                    <div class="col-sm-6 fontwt500"><span *ngIf = "b.pickup_drop == 0;else pickDropid" >No</span>
                         
                         <ng-template  #pickDropid>
                             
@@ -45,7 +45,9 @@
        
     </div>
     
-    <hr>
+    <p style="border-bottom:1px solid #051b87;;"></p>
+
+    <!-- <hr style="color:#051b87;opacity: unset;"> -->
 
     <div class="row" >
         
@@ -60,7 +62,7 @@
                          
             <span *ngIf="m === m1.offer_id">
                <b>{{m1.offer_name}}</b> 
-                <div *ngFor="let m2 of  m1.services.split(',');let k=index" >
+                <div class="fontwt500" *ngFor="let m2 of  m1.services.split(',');let k=index" >
                     <div *ngFor="let m3 of  MasterServiceData1;" >
                         
                         <span  *ngIf="m2 === m3.service_id"><i class="fa fa-check-circle" style="color: #429c68;"></i>&nbsp;  {{m3.service_name}}</span>
@@ -74,10 +76,10 @@
                 </div>
 
                 <ng-template  #nocomboservice>
-                    <span>None</span>
+                    <span class="fontwt500">None</span>
                   </ng-template>
 
-                <div *ngIf="b.comboprice_total != null;else nocombototal">
+                <div style="color: #f90832;font-weight: bold;" *ngIf="b.comboprice_total != null;else nocombototal">
                     <i class="fa fa-rupee"></i> {{b.comboprice_total}}
                 </div>
                 <ng-template  #nocombototal>
@@ -93,35 +95,36 @@
                 <div class="col-sm-6"><b>Extra Services & Price</b></div>
                 <div class="col-sm-6"><div *ngIf="b.services != null;else noservice">
                     <div *ngFor="let m of  b.services.split(',');let j=index" >
-                      <div *ngFor="let m1 of  MasterServiceData1;" >
+                      <div class="fontwt500" *ngFor="let m1 of  MasterServiceData1;" >
                        
           <span *ngIf="m === m1.service_id"><i class="fa fa-check-circle" style="color: #429c68;"></i>&nbsp; {{m1.service_name}}</span>
                       </div>
                       
                     </div>
-                    <div *ngIf="b.serviceprice_total != null;else noserviceamount">
+                    <div style="color: #f90832;font-weight: bold;" *ngIf="b.serviceprice_total != null;else noserviceamount">
                         <i class="fa fa-rupee"></i> {{b.serviceprice_total}}
                     </div>
                     <ng-template  #noserviceamount>
-                        <span>None</span>
+                        <span class="fontwt500">None</span>
                       </ng-template>
                   </div></div>
                   <ng-template  #noservice>
-                    <span>None</span>
+                    <span class="fontwt500">None</span>
                   </ng-template>
             </div>
 
         </div>
         </div>
 
-        <hr>
+        <p style="border-bottom:1px solid #051b87;"></p>
+        <!-- <hr style="color:#051b87;opacity: unset;"> -->
 
 <div class="row" >
     <div class="col-sm-6">
        
-        <div class="row">
+        <div class="row" >
             <div class="col-sm-6"><b>Total (<span><i class="fa fa-rupee"></i></span>)</b></div>
-            <div class="col-sm-6"><i class="fa fa-rupee"></i> {{b.payable_amt}}</div>
+            <div class="col-sm-6" style="color: #f90832;font-weight: bold;"><i class="fa fa-rupee"></i> {{b.payable_amt}}</div>
         </div>
         
     </div>
