--- a/src/app/my-booking/my-booking.component.html
+++ b/src/app/my-booking/my-booking.component.html
@@ -15,7 +15,7 @@
                   <th  style="display:none;width: 0px;">b</th>
                 <th style="width:13%;font-weight:normal;">Booking Id</th>
                 <th style="width: 17%;font-weight:normal;">Registration No</th>
-                <th style="width:11%;font-weight:normal;">Date</th>
+                <th style="width:11%;padding: left 9px;font-weight:normal;">Booking Date</th>
                 <th style="width:13%;font-weight:normal;">Shop</th>
                 <th style="width:23%;font-weight:normal;">Booked Status</th>
                 <th style="width:12%;font-weight:normal;">Service Status</th>
