--- a/src/app/onlinebooking/onlinebooking.component.html
+++ b/src/app/onlinebooking/onlinebooking.component.html
@@ -103,7 +103,8 @@
                   <label >Pick-up Date <span class="requiredfield">  *</span></label> 
       <br>
                        
-      <input class="datecls" min="{{current_date}}" type="date" style="border: 1px solid;height: 34px;width: 110px;" matinput="" formControlName="pickup_date" id="pickup_dateid" placeholder="Date From" >
+      <input class="datecls" min="{{current_date}}"  type="date" (change)="dropdatapicker()" style="border: 1px solid;height: 34px;width: 110px;" matinput="" formControlName="pickup_date" id="pickup_dateid" placeholder="Date From" >
+      <!-- <br>  <span id="enddate_message2" style="color: red;display: none;">Pickup date Invalid</span> -->
   </div>
                 </td>
   
@@ -160,9 +161,10 @@
                 <td style="width: 121px;" class="dropdateMob">
                   <div id="dropdatetdid" *ngIf="getPickupAvlData2 == 1" style="display: none;width: 110px;">
                   <label >Drop Date</label> 
-      <br>
-                       
-      <input class="datecls" min="{{current_date}}" type="date" style="border: 1px solid;height: 34px;width: 110px;" matinput="" formControlName="drop_date" placeholder="Date From" >
+                        
+      <input class="datecls" min="{{current_date}}" type="date" style="border: 1px solid;height: 34px;width: 110px;" (change)="dropdatapicker()" id="drop_dateid" matinput="" formControlName="drop_date" placeholder="Date From" >
+      <br>  <span id="enddate_message1" style="color: red;display: none;">To date Invalid</span>
+       
                 </div>
                 </td>
                 <td style="width: 48px;">
