--- a/src/app/shopdashboard/shopdashboard.component.html
+++ b/src/app/shopdashboard/shopdashboard.component.html
@@ -4,41 +4,28 @@
   <div class="content-container " [class.opened]="opened" >
     <div class="table-responsive" >
     <table  class="table  servicecss" *ngIf="posts"  datatable="ng"  datatable [dtOptions]="dtOptions" style="border: 0.5px solid #000000 !important">
-      <thead style="color: black;text-align: center;background-color: #80808091;">
+      <thead style="color: black;text-align: left;background-color: #80808091;">
 
           <tr>
           <th  style="display:none;width: 0px;">b</th>
-          <th style="width:90px;" class="fontwghtcls">Booking Id</th>
-          <th style="width: 80px;" class="fontwghtcls">Registration Number</th>
-          <th style="width:90px;" class="fontwghtcls">Date</th>
-          <th style="width:150px;" class="fontwghtcls">Customer Name</th>
-          <!-- <th style="width:94px;font-weight:normal;" >Combo Services</th> -->
-          <!-- <th style="width: 142px;font-weight:normal;" >Combo Services Price(<span><i class="fa fa-rupee"></i></span>)</th> -->
-          <!-- <th style="width:100px;font-weight:normal;" >Extra Services</th> -->
-          <!-- <th style="width:140px;font-weight:normal;" >Extra Services Price (<span><i class="fa fa-rupee"></i></span>)</th> -->
-          <th style="width:100px;" class="fontwghtcls">Total (<span><i class="fa fa-rupee"></i></span>) </th>
-          <!-- <th  style="width:100px;font-weight:normal;">Pick-up & Drop</th> -->
-          <!-- <th  style="width:150px;font-weight:normal;">Pick-up & Drop Message</th> -->
-          <th style="width:60px;" class="fontwghtcls">Confirm</th>
-          <th style="width:60px;" class="fontwghtcls">Reject</th>
+          <th style="width:90px;padding-left: 9px !important;" class="fontwghtcls">Booking Id</th>
+          <th style="width: 80px;padding-left: 9px !important;" class="fontwghtcls">Registration Number</th>
+          <th style="width:90px;padding-left: 9px !important;" class="fontwghtcls">Date</th>
+          <th style="width:150px;padding-left: 9px !important;" class="fontwghtcls">Customer Name</th>
+           <th style="width:100px;padding-left: 9px !important;" class="fontwghtcls">Total (<span><i class="fa fa-rupee"></i></span>) </th>
+           <th style="width:60px;padding-left: 9px !important;" class="fontwghtcls">Confirm</th>
+          <th style="width:60px;padding-left: 9px !important;" class="fontwghtcls">Reject</th>
 
 
         </tr>
       </thead>
-      <!-- <tbody *ngIf = "bookingDetails1 == ''">
-        <tr>
-          <td colspan="7" style="text-align: center;">
-            No data available
-          </td>
-        </tr>
-      </tbody> -->
-      <!-- <tbody *ngIf = "bookingDetails1 != ''"> -->
-        <tbody>
-        <tr *ngFor="let b of  posts | paginate: config ;  let i=index;" style="border-bottom:1px solid #aeaeae;text-align: center;">
+     
+      <tbody>
+        <tr *ngFor="let b of  posts | paginate: config ;  let i=index;" style="border-bottom:1px solid #aeaeae;text-align: left;">
 
           <td style="display:none;width: 0px;">{{b.id}}</td>
           <td class="fontwghtcls"><a style="cursor: pointer;color: #26a0fc;text-decoration: underline;"  (click)="ViewDetailsPopup(b.Booking_id,'Upcoming Booking')" >{{b.Booking_id}}</a></td>
-          <td>{{b.vehicle_number}}</td>
+          <td >{{b.vehicle_number}}</td>
           <td>
             {{b.bookingdate | date: 'dd-MM-yyyy'}}
             <!-- <input type="date" value="{{b.bookingdate}}" readonly style="width: 110px;border: none;"> -->
@@ -85,24 +72,19 @@
       <div class="content-container1" [class.opened1]="opened1">
         <div class="table-responsive carwashstatustbl" >
         <table  class="table  servicecss"  *ngIf="posts1"  datatable="ng"  datatable [dtOptions]="dtOptions1" style="border: 0.5px solid #000000 !important">
-          <thead style="color: black;text-align: center;background-color: #80808091;">
+          <thead style="color: black;text-align: left;background-color: #80808091;">
 
-              <tr>
+              <tr >
                 <th  style="display:none;width: 0px;">b</th>
-              <th style="width:90px;" class="fontwghtcls">Booking Id</th>
-              <th style="width: 70px;" class="fontwghtcls">Registration Number</th>
-              <th style="width:70px;" class="fontwghtcls">Date</th>
-              <th style="width:150px;" class="fontwghtcls">Customer Name</th>
-              <!-- <th style="width: 113px;font-weight:normal;" >Combo Services</th>
-              <th style="width: 163px;font-weight:normal;" >Combo Services Price(<span><i class="fa fa-rupee"></i></span>)</th>
-              <th style="width:150px;font-weight:normal;" >Extra Services</th>
-              <th style="width:190px;font-weight:normal;" >Extra Services Price (<span><i class="fa fa-rupee"></i></span>)</th> -->
-              <th style="width:80px;" class="fontwghtcls">Total (<span><i class="fa fa-rupee"></i></span>) </th>
-              <!-- <th  style="width: 108px;font-weight:normal;">Pick-up & Drop</th> -->
+              <th style="width:90px;padding-left: 9px !important;" class="fontwghtcls">Booking Id</th>
+              <th style="width: 70px;padding-left: 9px !important;" class="fontwghtcls">Registration Number</th>
+              <th style="width:70px;padding-left: 9px !important;" class="fontwghtcls">Date</th>
+              <th style="width:150px;padding-left: 9px !important;" class="fontwghtcls">Customer Name</th>
+             <th style="width:80px;padding-left: 9px !important;" class="fontwghtcls">Total (<span><i class="fa fa-rupee"></i></span>) </th>
               <th   hidden>Status</th>   <!-- for excel print only -->
 
-              <th  style="width:90px;" class="fontwghtcls">Status</th>
-              <th style="width:20px;" class="fontwghtcls">Update</th>
+              <th  style="width:90px;padding-left: 9px !important;" class="fontwghtcls">Status</th>
+              <th style="width:20px;padding-left: 9px !important;" class="fontwghtcls">Update</th>
 
 
             </tr>
@@ -116,7 +98,7 @@
           </tbody> -->
           <!-- <tbody *ngIf = "AcceptbookingDetails1 != ''"> -->
             <tbody>
-            <tr *ngFor="let b of  posts1;  let i=index;" style="border-bottom:1px solid #aeaeae;text-align: center;">
+            <tr *ngFor="let b of  posts1;  let i=index;" style="border-bottom:1px solid #aeaeae;text-align: left;">
 
               <td style="display:none;width: 0px;">{{b.id}}</td>
               <td class="fontwghtcls"><a style="cursor: pointer;color: #26a0fc;text-decoration: underline;" (click)="ViewDetailsPopup(b.Booking_id,'Carwash Status')">{{b.Booking_id}}</a></td>
@@ -125,7 +107,7 @@
                 {{b.bookingdate | date: 'dd-MM-yyyy'}}
                 <!-- <input type="date" value="{{b.bookingdate}}" readonly style="width: 110px;border: none;"> -->
               </td>
-              <td>{{b.firstname}}</td>
+              <td style="text-align: left;">{{b.firstname}}</td>
               <!-- <td>
 
             {{b.combo_id}}
@@ -143,7 +125,7 @@
               </div>
                 </td>
               <td>{{b.serviceprice_total}}</td> -->
-              <td >{{b.payable_amt}}</td>
+              <td style="padding-right: 2px;">{{b.payable_amt}}</td>
               <!-- <td>
                 <span *ngIf = "b.pickup_drop == 0;else pickDropid" >No</span>
 
@@ -184,7 +166,7 @@
         <div class="accordion2">
           <h2 class="title2 subheading"  (click)="opened2 = !opened2">Today's Offers<i class="fa fa-chevron-down"></i> </h2>
           <div class="content-container2" [class.opened2]="opened2">
-            <div class="row">
+            <div class="row" style="margin-left: -162px;">
               <div class="col-sm-6" *ngIf="currentOffer1 != ''">
                 <h2 style="text-align: center;" class="mainheading"> Combo Offers</h2>
 
