--- a/src/app/shopowner-onlinebooking/shopowner-onlinebooking.component.html
+++ b/src/app/shopowner-onlinebooking/shopowner-onlinebooking.component.html
@@ -156,7 +156,7 @@
                 <label >Pick-up Date <span class="requiredfield">  *</span></label> 
     <br>
                      
-    <input class="datecls" min="{{current_date}}" type="date" style="border: 1px solid;height: 34px;width: 116px;" matinput="" formControlName="pickup_date" id="pickup_dateid2" placeholder="Date From" >
+    <input class="datecls" min="{{current_date}}" type="date" (change)="datapicker()" style="border: 1px solid;height: 34px;width: 116px;" matinput="" formControlName="pickup_date" id="pickup_dateid2" placeholder="Date From" >
 </div>
               </td>
 
@@ -215,7 +215,9 @@
                 <label >Drop Date</label> 
     <br>
                      
-    <input class="datecls" min="{{current_date}}" type="date" style="border: 1px solid;height: 34px;width: 116px;" matinput="" formControlName="drop_date" placeholder="Date From" >
+    <input class="datecls" min="{{current_date}}" type="date" (change)="datapicker()" style="border: 1px solid;height: 34px;width: 116px;" id="drop_dateid2" matinput="" formControlName="drop_date" placeholder="Date From" >
+    <br>  <span id="dropdate_message" style="color: red;display: none;">To date Invalid</span>
+
               </div>
               </td>
               <td style="width: 173px;">
