--- a/src/app/combo-offers/combo-offers.component.html
+++ b/src/app/combo-offers/combo-offers.component.html
@@ -3,103 +3,35 @@
   <div class="col-sm-6" class="mainheading" style="text-align:center;">
     <h2 style="text-align: center;" class="mainheading">Add Today's Combo Offer</h2>
   </div>
-  <!-- <div class="row"> <div class="col-sm-2">
   
-    </div>
-  
-    <div class="col-sm-8" style="border:1px solid rgb(92, 43, 228);" >
-  
-      <h2 style="text-align: center;" class="subheading">Current Offers </h2>
-  
-  
-        <table  class="table table-responsive" style="width:99%;border: 0.5px solid #aeaeae;">
-            <thead style="background: #61c0e5;border-bottom: 0.5px solid #aeaeae;">
-              <tr >
-  
-                <th >Sl. No.</th>
-                <th>Offer Name</th>
-                <th>Model</th>
-                <th >Services</th>
-                <th >From Date</th>
-                <th >To Date</th>
-                <th >Offer Percent</th>
-                <th >Offer Amount</th>
-  
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngIf="comboofferData1.length == 0">
-                <td colspan="7" style="">No data available</td>
-  
-              </tr>
-  
-                <tr *ngFor="let service of  comboofferData1;let i=index">
-  
-                <td>{{i + 1}}</td>
-                <td>{{service.offer_name}}</td>
-                <td>
-                  <span *ngFor="let s of shopserviceModel1" >
-                    <span *ngIf="s.model_id === service.model_id">{{s.model_name}}</span>
-  
-                  </span>
-                  </td>
-                <td >
-                  <div *ngFor="let m of  service.services.split(',')">
-                    <span *ngFor="let m1 of  MasterServiceData1" >
-  
-  <span *ngIf="m === m1.service_id">{{m1.service_name}}</span>
-                    </span>
-  
-                  </div>
-  
-                </td>
-                <td *ngFor="let m of  MasterServiceData1">{{service.services}} {{m.service_name}}
-  
-  
-                </td>
-                <td>{{service.start_date | date: 'dd-MM-yyyy'}}</td>
-                <td>{{service.end_date |  date: 'dd-MM-yyyy'}}</td>
-                <td>{{service.offer_percent}} %</td>
-                <td><i class="fa fa-rupee"> </i> {{service.combo_price}}</td>
-  
-  
-  
-              </tr>
-  
-            </tbody>
-          </table>
-  
-        </div >
-  
-        <div class="col-sm-2">
-  
-        </div>
-        </div> -->
   
   <br>
   <div class="row" >
-      <div class="col-sm-3">
+      
   
-      </div>
-  
-      <div class="col-sm-6 secondcolumn" style="border:1px solid black;padding-top:10px;">
-  
+      <div class="col-sm-6 " >
+  <div >
   <h2 style="text-align: center;" class="subheading"></h2>
         <div class="row">
           <div class="col-sm-1">
   
           </div>
-          <div class="col-sm-3 databtn" style="text-align: left;">
-            <label style="width: 74px;">From date</label>  <p class="labelFieldSpace" style="display: block;"></p> <input type="date" id="combooffer_fromdate" min="{{current_date}}" value="{{date | date:'yyyy-MM-dd'}}" style="width: 130px;" >
+          <div class="col-sm-3 databtn fromdatecls" style="text-align: left;">
+            <label style="width: 74px;">From date</label>  
+            <!-- <p class="labelFieldSpace" style="display: block;"></p> -->
+             <input type="date" id="combooffer_fromdate" min="{{current_date}}" value="{{date | date:'yyyy-MM-dd'}}" style="width: 130px;" >
           </div>
   
           <div class="col-sm-3 databtn">
-            <label style="width: 59px;">To date</label>  <p class="labelFieldSpace" style="display: block;"></p> <input (click)="dateErrorMsg()" class="todate" type="date" id="combooffer_todate" min="{{current_date}}" value="{{date | date:'yyyy-MM-dd'}}" style="width: 130px;">
+            <label style="width: 59px;">To date</label>  
+            <!-- <p class="labelFieldSpace" style="display: block;"></p> -->
+             <input (click)="dateErrorMsg()" class="todate" type="date" id="combooffer_todate" min="{{current_date}}" value="{{date | date:'yyyy-MM-dd'}}" style="width: 130px;">
             <br><span id="enddate_message" style="color: red;display: none;">To date Invalid</span>
           </div>
   
           <div class="col-sm-3 databtn">
-            <label style="width: 50px;">Model</label> <p class="labelFieldSpace" style="display: block;"></p>
+            <label style="width: 53px;">Model</label> 
+            <!-- <p class="labelFieldSpace" style="display: block;"></p> -->
                           <select  class="model"  style="width: 130px;height: 24px;" (change)="loadcombooffertblByModelid(2)" id="model_id">
                               <option value="">--Select Model--</option>
   
@@ -115,46 +47,89 @@
   
         <br>
   
-        <div style="display: none !important;" id="secondtblid" >
-  
-          <table  class="table table-responsive addcombooffer"  style="text-align:center;width: 76%;border: 0.5px solid #000000 !important;margin-left:56px;overflow: auto;" >
-              <thead style="background: #202c45;color:white;">
-                <tr >
-  
-                  <th  style="width: 50px;">Sl. No.</th>
-  
-                  <th style="width: 250px;">Service Name</th>
-                  <th style="width: 100px;">Amount &nbsp;(<i class="fa fa-rupee">) </i></th>
-                  <th style="width: 100px;">Select</th>
-                </tr>
-              </thead>
-              <tbody *ngIf="combooffertblByModelid1.length < 2">
-               <tr><td colspan="4" style="text-align: center;">No data available</td></tr>
-                </tbody>
+        
   
   
-              <tbody *ngIf="combooffertblByModelid1.length >= 2">
+  <br>
+
+  <div id="secondtblid2" class="onchangetable" style="display: none;">
+
+        
+    <table  class="table table-responsive addcombooffer"  style="text-align:center;width: 69%;border: 0.5px solid #000000 !important;margin-left:56px;overflow: auto;" >
+      <thead style="background: #202c45;color:white;">
+        <tr >
+
+          <th  style="width: 50px;">Sl. No.</th>
+
+          <th style="width: 250px;text-align: left;">Service Name</th>
+          <th style="width: 100px;text-align: right;">Amount &nbsp;(<i class="fa fa-rupee">) </i></th>
+          <th style="width: 100px;">Select</th>
+        </tr>
+      </thead>
+      <tbody *ngIf="combooffertblByModelid1.length < 2">
+       <tr><td colspan="4" style="text-align: center;">No data available</td></tr>
+        </tbody>
+
+
+      <tbody *ngIf="combooffertblByModelid1.length >= 2">
+
+
+
+        <!-- <tr *ngFor="let service of  serviceData1 | paginate: config "> -->
+          <tr   *ngFor="let service of  combooffertblByModelid1; let i=index;">
+         <td  style="width: 50px;">{{i+1}}</td>
+          <!-- <td style="width: 200px;display:hidden;">{{service.service_id}}</td> -->
+          <td style="width: 250px;text-align: left;">{{service.service_name}}</td>
+          <td style="width: 100px;text-align: right;"><span id="amount_{{service.service_id}}">{{service.actual_amount}}</span>
+          <p id="validateamount_{{service.service_id}}" style="color: red;display: none;">Please Enter Amount</p>
+          </td>
+          <td style="width: 100px;">
+            <input type="checkbox" (click)="collectServiceid(service.service_id)">
+              </td>
+
+
+        </tr>
+       
+
+
+      </tbody>
+
+      
+    </table>
+
+    <table style="text-align:center;width: 69%;margin-left:56px;overflow: auto;">
+      <tbody style="border: none !important;">
+        <tr>
+          <td  style="width: 50px;"></td>
+          <!-- <td style="width: 200px;display:hidden;">{{service.service_id}}</td> -->
+          <td style="width: 250px;text-align: left;"></td>
+          <td style="width: 100px;text-align: right;"><span ></span>
+            
+              
+                <label class="amt" style="width: 70px;">Amount &nbsp;(<i class="fa fa-rupee"> </i>)</label>
+                <br>
+                <input type="number" min="1" class="amt1" readonly id="totalamount" style="width: 80px;height: 24px;text-align: left;">
+    
+              
+           
+          </td>
+          <td style="width: 100px;">
+            
+              </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
   
+  </div>
+      </div>
   
+      <div class="col-sm-6">
+
+
+        <div style="display: none !important;margin-top: 10px;" id="secondtblid" >
   
-                <!-- <tr *ngFor="let service of  serviceData1 | paginate: config "> -->
-                  <tr   *ngFor="let service of  combooffertblByModelid1; let i=index;">
-                 <td  style="width: 50px;">{{i+1}}</td>
-                  <!-- <td style="width: 200px;display:hidden;">{{service.service_id}}</td> -->
-                  <td style="width: 250px;">{{service.service_name}}</td>
-                  <td style="width: 100px;"><span id="amount_{{service.service_id}}">{{service.actual_amount}}</span>
-                  <p id="validateamount_{{service.service_id}}" style="color: red;display: none;">Please Enter Amount</p>
-                  </td>
-                  <td style="width: 100px;">
-                    <input type="checkbox" (click)="collectServiceid(service.service_id)">
-                      </td>
-  
-  
-                </tr>
-  
-  
-              </tbody>
-            </table>
+          
   
   <div >
   
@@ -165,11 +140,14 @@
   
     <!-- <br> -->
   
-    <div class="row amountwebrow" >
+    <div class="row amountwebrow onchangecontent" >
       <div class="col-sm-1"></div>
   
   
       <div class="col-sm-3 bottonpadg" style="width:-2% !important;">
+        <div class="">
+
+        
         <table>
           <tr>
             <td>
@@ -203,25 +181,9 @@
             </tr>
           </table>
   
+        </div>
       </div>
-      <div class="col-sm-2" style="padding-left:0px !important;padding-right:0px !important;">
-        <table>
-          <tr>
-            <td>
-              <label class="amt" style="width: 70px;">Amount &nbsp;(<i class="fa fa-rupee"> </i>)</label>
-              <br>
-              <input type="number" min="1" class="amt1" readonly id="totalamount" style="width: 80px;height: 24px;text-align: left;">
-  
-            </td>
-          </tr>
-  
-          <tr>
-            <td>
-  
-            </td>
-          </tr>
-        </table>
-      </div>
+      
   
       <div class="col-sm-2">
         <label class="offerpreg1" style="width: 80px;">Offer (%)</label>
@@ -240,19 +202,18 @@
      </div>
   
      <div  class="row amountwebrow" style="margin-top:10px;">
-      <div class="col-sm-10 " >
-        <div  class="addofferbtncls" style="text-align: right;">
+      <!-- <div class="col-sm-1" ></div> -->
+      <div class="col-sm-8 addofferbtncls" >
+        <div  class="addofferbtncls2" style="text-align: right;">
           <button id="addCombobtn" class="allSubmitbtn addbtn btn"   (click)="AddComboOffer()">Add Offer</button>
         </div>
       </div>
-  
+      <div class="col-sm-1" ></div>
   
   
     </div>
   <br>
-    <!-- <div class="row" style="text-align: right;"> -->
   
-    <!-- </div> -->
   
   </div>
   
@@ -261,25 +222,18 @@
   </div>
   
   </div>
-  
-  
-  <br>
-  <!-- <div style="text-align: center;">
-    <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
-  </div> -->
-  
-      </div>
-  
-      <div class="col-sm-3">
-  
+
+
+
+        
       </div>
   
   </div>
   <br>
   <div class="row" >
-  <div class="col-sm-2"></div>
-  <div class="col-sm-8">
-  <div class="accordion accordionmin">
+  <!-- <div class="col-sm-1"></div> -->
+  <div class="col-sm-12">
+  <div class="accordioncombooffers accordionmin">
     <h2 class="title subheading" style="overflow: auto;width: 100%;"  (click)="opened = !opened">Your Previous Combo Offers <i class="fa fa-chevron-down"></i> </h2>
     <div class="content-container" [class.opened]="opened">
       <div class="row">
@@ -305,12 +259,7 @@
   
       <div class="col-sm-4">
         <label style="width: 59px;">Year</label>
-       <!-- <select  id="year"  style="width:130px;height: 24px;" [(ngModel)]="ComboCurrentyear" >
-           <option value="">{{date | date:'MMM'}}</option> -->
-          <!-- <span *ngFor="let yr of year"></span>
-          <option *ngIf yr.name=currentYear [value]="yr.id">{{yr.name}}</option> -->
-          <!-- <option *ngFor="let yr of year" [value]="yr.id" >{{yr.name}}</option>
-          </select> -->
+      
           <ng-select
     [items]="year"
     bindLabel="name"
@@ -338,13 +287,13 @@
           <!-- <tr > -->
   
             <th style="width:70px;" class="fontwghtcls">Sl.No.</th>
-            <th style="width:100px;" class="fontwghtcls">Offer Name</th>
-            <th style="width:120px;" class="fontwghtcls">Model</th>
-            <th style="width:250px;" class="fontwghtcls">Services</th>
+            <th style="width:100px;text-align: left" class="fontwghtcls">Offer Name</th>
+            <th style="width:120px;text-align: left" class="fontwghtcls">Model</th>
+            <th style="width:250px;text-align: left" class="fontwghtcls">Services</th>
             <th style="width:100px;" class="fontwghtcls">From Date</th>
             <th style="width:100px;" class="fontwghtcls">To Date</th>
             <th style="width:120px;" class="fontwghtcls">Offer Percent(%)</th>
-            <th style="width:125px;" class="fontwghtcls">Offer Amount &nbsp;(<i class="fa fa-rupee"></i>)</th>
+            <th style="width:125px;text-align: right;" class="fontwghtcls">Offer Amount &nbsp;(<i class="fa fa-rupee"></i>)</th>
             <th style="width:70px;" class="fontwghtcls">Delete</th>
   
           <!-- </tr> -->
@@ -358,14 +307,14 @@
             <tr *ngFor="let service of  comboofferData2  | paginate: config ;  let i=index;">
   
             <td>{{i + 1}}<input type="hidden" maxlength="3" value={{service.offer_id}} style="width:30px !important;" ></td>
-            <td>{{service.offer_name}}</td>
-            <td>
+            <td style="text-align: left">{{service.offer_name}}</td>
+            <td style="text-align: left">
               <span *ngFor="let s of shopserviceModel1" >
                 <span *ngIf="s.model_id === service.model_id">{{s.model_name}}</span>
   
               </span>
               </td>
-           <td >
+           <td style="text-align: left">
               <div *ngFor="let m of  service.services.split(',')">
                 <span *ngFor="let m1 of  MasterServiceData1" >
   
@@ -382,8 +331,8 @@
             <td>{{service.start_date | date: 'dd-MM-yyyy'}}</td>
             <td>{{service.end_date |  date: 'dd-MM-yyyy'}}</td>
             <td>{{service.offer_percent}} </td>
-            <td> {{service.combo_price}}</td>
-            <td><i  (click)="RemoveComboInfo(service.offer_id)" class="fa fa-trash" style="cursor: pointer;"></i></td>
+            <td style="text-align: right"> {{service.combo_price}}</td>
+            <td><i  (click)="RemoveComboInfo(service.offer_id)" class="fa fa-trash" style="cursor: pointer;color: red;"></i></td>
   
   
           </tr>
@@ -399,7 +348,7 @@
   </div>
   </div>
   </div>
-  <div class="col-sm-2"></div>
+  <!-- <div class="col-sm-2"></div> -->
   </div>
   
   </div>
