--- a/src/app/shopdashboard/shopdashboard.component.scss
+++ b/src/app/shopdashboard/shopdashboard.component.scss
@@ -2,11 +2,7 @@
     font-weight: normal;
 }
 
-// .table-responsive {
-    
-  //overflow-x: hidden !important;
 
-// }
 
 .cdk-overlay-pane{
     width: 700px !important;
@@ -105,6 +101,11 @@
 }
 
 @media screen and (min-width: 768px) {
+  .table-responsive {
+    
+  overflow-x: hidden !important;
+
+}
 .carwashstatustbl{
   overflow: hidden;
 }
