--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,12 @@ body {
   //margin-left:37%;
   display:none;
 }
+
+.ng-select .ng-select-container {
+  
+  width: 93% !important;
+}
+
 @media screen and (min-width: 768px) {
   .mat-autocomplete-panel.mat-autocomplete-visible {
     visibility: visible;
