--- a/src/app/combo-offers/combo-offers.component.scss
+++ b/src/app/combo-offers/combo-offers.component.scss
@@ -7,11 +7,11 @@
     margin-left: 15px;
   }
    
+  .totaltblcls{
+    margin-left: 65px;
+  }
 
-  // .onchangetable {
-  //   position: absolute;
-  //   top: 249px;
-  // }
+  
   
  
   .amt1{
@@ -119,18 +119,24 @@
   margin-bottom: 13px;
   margin-left: 15px;
 }
-// .accordion[_ngcontent-nqw-c176]{
-//    width: 100% !important;
-// }
+.databtn2{
+   margin-left: 4px;
+}
 
 }
 
 @media screen and (min-width: 768px) {
+  .bottonpadg{
+    margin-right: 7px;
+  }
+  .dateselectdivcls {
+    margin-left: 72px;
+  }
   .combooffheading{
-    margin-left: 48px;
+    margin-left: 24px;
   }
   .onchangecontent {
-    margin-left: 9px;
+    margin-left: 59px;
     
 }
   .addbtncls{
