--- a/src/app/combo-offers/combo-offers.component.html
+++ b/src/app/combo-offers/combo-offers.component.html
@@ -10,7 +10,7 @@
       
   
       <div class="col-sm-5" >
-        <div style="border: 1px solid;margin-left: 12px;">
+        <div style="border: 1px solid;margin-left: 30px;;">
   <div >
     <h2 style="text-align: left;" class="mainheading combooffheading">Add Today's Combo Offer</h2>
         <div class="row dateselectdivcls" >
@@ -59,7 +59,7 @@
   <div id="secondtblid2" class="onchangetable" style="display: none;">
 
         
-    <table  class="table table-responsive addcombooffer"  style="text-align:center;width: 72%;border: 0.5px solid #000000 !important;margin-left:75px;overflow: auto;" >
+    <table  class="table table-responsive addcombooffer"  style="text-align:center;width: 73%;border: 0.5px solid #000000 !important;margin-left:75px;overflow: auto;" >
       <thead style="background: #202c45;color:white;">
         <tr >
 
@@ -101,7 +101,7 @@
       
     </table>
 <div style="margin-top: -12px;">
-    <table class="totaltblcls" style="text-align:center;width: 72%;margin-left:75px;overflow: auto;">
+    <table class="totaltblcls" style="text-align:center;width: 73%;margin-left:75px;overflow: auto;">
       <tbody style="border: none !important;">
         <tr>
           <td  style="width: 50px;"></td>
