--- a/src/app/combo-offers/combo-offers.component.scss
+++ b/src/app/combo-offers/combo-offers.component.scss
@@ -8,7 +8,7 @@
   }
    
   .totaltblcls{
-    margin-left: 65px;
+    margin-left: 65px !important;
   }
 
   
@@ -126,14 +126,17 @@
 }
 
 @media screen and (min-width: 768px) {
+  .databtn2{ 
+    margin-left: 7px;
+  }
   .bottonpadg{
-    margin-right: 7px;
+    margin-right: 12px;
   }
   .dateselectdivcls {
     margin-left: 72px;
   }
   .combooffheading{
-    margin-left: 24px;
+    margin-left: 77px;
   }
   .onchangecontent {
     margin-left: 59px;
@@ -153,7 +156,7 @@
    // margin-left: 66px;
   }
   .offamtdiv{
-    margin-left: -21px;
+    margin-left: -26px;
   }
   .offeramt{
     // margin-left: 10px;
