--- a/src/app/shop-service/shop-service.component.scss
+++ b/src/app/shop-service/shop-service.component.scss
@@ -145,7 +145,7 @@ padding: 12px;
   overflow: hidden;
   max-height: 0;
   margin-left:20px;
-  margin-bottom:10px;
+//  margin-bottom:10px;
 }
 
 .content-container1.opened1  {
@@ -195,3 +195,4 @@ max-height: none;
 .fontwghtcls {
   font-weight: bold !important;
 }
+
