--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,7 +51,7 @@ body {
 }
 
 .ng-select .ng-select-container {
-  
+
   width: 93% !important;
 }
 
@@ -350,6 +350,13 @@ input[type=number] {
 
 
 .mat-autocomplete-panel.mat-autocomplete-visible {
- 
+
   overflow: auto !important;
+
+}
+.ngx-pagination .current {
+  padding: 0.1875rem 0.625rem;
+  background:brown !important;
+  color: #fefefe;
+  cursor: default;
 }
