--- a/src/app/shop-service/shop-service.component.html
+++ b/src/app/shop-service/shop-service.component.html
@@ -5,7 +5,7 @@
   <button class="btn btn-success" (click)="DisplayForm()" >Add New Service</button>
 
 </div> -->
-<div style="overflow: hidden;">
+<div style="overflow: hidden;height:370px;">
 
 <div class="row">
 
@@ -26,13 +26,13 @@
                 <th style="width:150px;" class="fontwghtcls">Model </th>
                 <th style="width:90px;" class="fontwghtcls">Service Amount (<span><i class="fa fa-rupee"></i></span>)</th>
 
-                <th  style="width:100px;border-right:solid 1px;" class="fontwghtcls">Action</th>
+                <th  style="width:100px;border-right:solid 1px;" class="fontwghtcls">Update</th>
 
                 <th style="width:85px;" class="fontwghtcls">Offer(%) </th>
                 <th style="width:85px;" class="fontwghtcls">Offer Price (<span><i class="fa fa-rupee"></i></span>)</th>
                 <th style="width:35px;" class="fontwghtcls">Start Date</th>
                 <th style="width:35px;" class="fontwghtcls">End Date</th>
-                <th  style="width:100px;" class="fontwghtcls">Action</th>
+                <th  style="width:100px;" class="fontwghtcls">Update</th>
               </tr>
             </thead>
             <tbody>
@@ -64,9 +64,11 @@
 
 
                     <td style="border-right:solid 1px;">
-                      <button  class="allSubmitbtn" *ngIf="service.status == '1';else butdisable" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;" id="updatebtn_{{service.service_id}}_{{i}}" (click)="UpdateServiceAmount(service.service_id,i)">Update</button>
+                      <a  *ngIf="service.status == '1';else butdisable" id="updatebtn_{{service.service_id}}_{{i}}" (click)="UpdateServiceAmount(service.service_id,i)" ><i style="color: #01992d;font-size: 20px;cursor: pointer;" class="fa fa-check-circle"></i></a>
+                      <!-- <button  class="allSubmitbtn" *ngIf="service.status == '1';else butdisable" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;" id="updatebtn_{{service.service_id}}_{{i}}" (click)="UpdateServiceAmount(service.service_id,i)">Update</button> -->
                       <ng-template #butdisable>
-                      <button   class="allSubmitbtn" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;opacity:.65" id="updatebtn_{{service.service_id}}_{{i}}" (click)="UpdateServiceAmount(service.service_id,i)" disabled>Update</button>
+                        <a  id="updatebtn_{{service.service_id}}_{{i}}"><i style="color: rebeccapurple;font-size: 20px;opacity:.65;" class="fa fa-check-circle"></i></a>
+                      <!-- <button   class="allSubmitbtn" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;opacity:.65" id="updatebtn_{{service.service_id}}_{{i}}" (click)="UpdateServiceAmount(service.service_id,i)" disabled>Update</button> -->
                     </ng-template>
                     </td>
                 <td>
@@ -88,11 +90,12 @@
                 <td>
 
 
+                   <a  *ngIf="service.status == '1';else butdisable1" id="updatebtn_{{service.service_id}}" (click)="UpdateOfferAmount(service.service_id,i)" ><i style="color: #01992d;font-size: 20px;cursor: pointer;" class="fa fa-check-circle"></i></a>
 
-
-                     <button class="allSubmitbtn"  *ngIf="service.status == '1';else butdisable1" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;" id="updatebtn_{{service.service_id}}" (click)="UpdateOfferAmount(service.service_id,i)">Update</button>
+                     <!-- <button class="allSubmitbtn"  *ngIf="service.status == '1';else butdisable1" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;" id="updatebtn_{{service.service_id}}" (click)="UpdateOfferAmount(service.service_id,i)">Update</button> -->
                      <ng-template #butdisable1>
-                      <button   class="allSubmitbtn" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;opacity:.65" id="updatebtn_{{service.service_id}}_{{i}}" (click)="UpdateServiceAmount(service.service_id,i)" disabled>Update</button>
+                      <a  id="updatebtn_{{service.service_id}}" ><i style="color:rebeccapurple;font-size: 20px;opacity: 0.65;visibility: unset;" class="fa fa-check-circle"></i></a>
+                      <!-- <button   class="allSubmitbtn" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;opacity:.65" id="updatebtn_{{service.service_id}}_{{i}}" (click)="UpdateServiceAmount(service.service_id,i)" disabled>Update</button> -->
                     </ng-template>
 
 
@@ -117,33 +120,7 @@
 
   <div class="col-md-6">
 
-    <div class="row"  style="margin-bottom: 10px;"  >
-      <!-- <div *ngIf="let data of  statuspickupvalue;" > -->
 
-      <label class="switch subheading" style="white-space:nowrap;margin-left: 18px;" >Do you provide pick & drop service?
-        
-       <!-- {{statuspickupvalue}} -->
-
-        <span *ngIf="statuspickupvalue == '1'">&nbsp;</span>
-      
-        <label class="switch" *ngIf="statuspickupvalue == '1'"  (click)="changepickupStatus(statuspickupvalue)">
-          <input  type="checkbox" checked>
-          <span class="slider round"></span>
-        </label>
-
-        <span *ngIf="statuspickupvalue == '0'">&nbsp;</span>
-        <label class="switch" *ngIf="statuspickupvalue == '0'"   (click)="changepickupStatus(statuspickupvalue)">
-          <input type="checkbox" >
-          <span class="slider round"></span>
-        </label>
-
-        <!-- <input style="float:  right; text-align: right;" type="checkbox" >
-        <span class="slider round"  style="margin-left: 250px;  width: 43px;"></span> -->
-      </label>
-
-     
-  <!-- </div> -->
-        </div>
 
     <div class="row">
     <div class="accordion">
@@ -188,11 +165,11 @@
             <input type="text"   style="padding-left: 2px !important;"   id="hidden_service" placeholder=""  >
 
           </td>
-          <td>Model</td>
+          <td style="width:60px;padding-left:12px;">Model</td>
           <td>
             <!-- <label style="width: 100px;">Model</label>  -->
 
-                <select   class="carmodelcls "  id="model" formControlName="model_id">
+                <select   class="carmodelcls "  id="model" formControlName="model_id" style="padding-left: 2px !important;">
 
                   <option value="">--Select Model--</option>
                   <option *ngFor="let m of servicemodelsdataobj" [value]="m.id">
@@ -215,7 +192,7 @@
           <td>
             <!-- <label class="customerProfileLbl" style="width: 100px;">Amount</label> -->
 
-             <input type="number" min="1"   style="padding-left: 0px !important;"  id="newamount" class="lastname" placeholder="" formControlName="actual_amount" style="width: 60px;">
+             <input type="number" min="1"   style="padding-left: 2px !important;"  id="newamount" class="lastname" placeholder="" formControlName="actual_amount" style="width: 60px;">
               <div *ngIf="shopserviceForm.controls['actual_amount'].touched && shopserviceForm.controls['actual_amount'].invalid ">
 
                 <div *ngIf="shopserviceForm.controls['actual_amount'].errors" style="color: red;">
@@ -255,7 +232,7 @@
     <div class="accordion1">
       <h2 class="title1 subheading" style="text-align: left;" (click)="opened1 = !opened1">Add New Service <i class="fa fa-chevron-down"></i> </h2>
       <div class="content-container1" [class.opened1]="opened1">
-    <div style="border: 1px solid;margin-left:0px!important;height: 85px;">
+    <div style="border: 1px solid;margin-left:0px!important;height: 68px;">
       <!-- <h2 style="text-align: center;" class="mainheading">Add New Service</h2> -->
       <form [formGroup]="MasterserviceForm" name="pf">
       <div class="table-responsive boxwidht" style="display: block;width: 100%;overflow-x: unset;padding-top: 3px;height: 100px;" id="shopservFormid2">
@@ -291,7 +268,7 @@
 
               </div>
             </td>
-      
+
         <td style="text-align: left;">
               <button class="allSubmitbtn" style="margin-top: -9px;margin-left: 12px;border-radius: 21px; width:68px; border:none; height:28px;font-weight: bold;"  (click)="AddMasterserviceDetails(MasterserviceForm.value)" [disabled]='!MasterserviceForm.valid'  >Add</button>
 
@@ -316,5 +293,32 @@
   </div>
 <br><br>
 </div>
+<div class="row"  style="margin-bottom: 10px;"  >
+  <!-- <div *ngIf="let data of  statuspickupvalue;" > -->
+
+  <label class="switch subheading" style="white-space:nowrap;margin-left: 18px;" >Do you provide pick & drop service?
+
+   <!-- {{statuspickupvalue}} -->
+
+    <span *ngIf="statuspickupvalue == '1'">&nbsp;</span>
+
+    <label class="switch" *ngIf="statuspickupvalue == '1'"  (click)="changepickupStatus(statuspickupvalue)">
+      <input  type="checkbox" checked>
+      <span class="slider round"></span>
+    </label>
+
+    <span *ngIf="statuspickupvalue == '0'">&nbsp;</span>
+    <label class="switch" *ngIf="statuspickupvalue == '0'"   (click)="changepickupStatus(statuspickupvalue)">
+      <input type="checkbox" >
+      <span class="slider round"></span>
+    </label>
+
+    <!-- <input style="float:  right; text-align: right;" type="checkbox" >
+    <span class="slider round"  style="margin-left: 250px;  width: 43px;"></span> -->
+  </label>
+
+
+<!-- </div> -->
+    </div>
 
 
